--- a/config/database.yml
+++ b/config/database.yml
@@ -3,22 +3,24 @@ defaults: &defaults
   encoding: utf8
   reconnect: false
   pool: 5
-  username: root
 
 development:
   database: handy_rails_tips_development
   <<: *defaults
   password: 
+  username: root
   
   
 test:
   database: handy_rails_tips_test
   <<: *defaults
   password: 
+  username: root
   
   
 production:
   database: handy_rails_tips_production
   <<: *defaults
-  password: jhb01
+  password: 80053dfd9f243e7484c1b40895a070c9
+  username: handy_rails_tips
   
