--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,39 @@
-defaults: &defaults
-  adapter: mysql
+# MySQL.  Versions 4.1 and 5.0 are recommended.
+#
+# Install the MySQL driver:
+#   gem install mysql2
+#
+# And be sure to use new-style password hashing:
+#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+development:
+  adapter: mysql2
   encoding: utf8
   reconnect: false
-  pool: 5
-
-development:
   database: handy_rails_tips_development
-  <<: *defaults
-  password: 
+  pool: 5
   username: root
-  
-  
+  password:
+  socket: /tmp/mysql.sock
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
   database: handy_rails_tips_test
-  <<: *defaults
-  password: 
+  pool: 5
   username: root
-  
-  
+  password:
+  socket: /tmp/mysql.sock
+
 production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
   database: handy_rails_tips_production
-  <<: *defaults
-  password: 80053dfd9f243e7484c1b40895a070c9
-  username: handy_rails_tips
-  
+  pool: 5
+  username: root
+  password:
+  socket: /tmp/mysql.sock
